--- a/src/index.html
+++ b/src/index.html
@@ -3,134 +3,140 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width; initial-scale=1.0; maximum-scale=1.0;">
-  <link rel="stylesheet" href="main.css">
+  <link rel="stylesheet" type="text/css" href="main.css">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>HTML Portfolio</title>
 </head>
 <body>
-<nav class="navbar navbar-default">
-  <div class="container">
-    <!-- Brand and toggle get grouped for better mobile display -->
-    <div class="navbar-header">
-      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#portfolio-collapse-menu">
-        <span class="sr-only">Toggle navigation</span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
-      <a class="navbar-brand" href="#">Maayan Rosenthal</a>
+
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+  <script src="js/bootstrap.min.js"></script>
+
+  <nav class="navbar navbar-default">
+    <div class="container">
+      <!-- Brand and toggle get grouped for better mobile display -->
+      <div class="navbar-header">
+        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#portfolio-collapse-menu">
+          <span class="sr-only">Toggle navigation</span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+        <a class="navbar-brand" href="#">Maayan Rosenthal</a>
+      </div>
+
+      <!-- Collect the nav links, forms, and other content for toggling -->
+      <div class="collapse navbar-collapse" id="portfolio-collapse-menu">
+        <ul class="nav navbar-nav">
+          <li><a href="#">Home</a></li>
+          <li><a href="#">About</a></li>
+        </ul>
+      </div>
+      <!-- /.navbar-collapse -->
     </div>
+    <!-- /.container-fluid -->
+  </nav>
 
-    <!-- Collect the nav links, forms, and other content for toggling -->
-    <div class="collapse navbar-collapse" id="portfolio-collapse-menu">
-      <ul class="nav navbar-nav">
-        <li><a href="#">Home</a></li>
-        <li><a href="#">About</a></li>
-      </ul>
-    </div>
-    <!-- /.navbar-collapse -->
-  </div>
-  <!-- /.container-fluid -->
-</nav>
+  <!--  <div class="header">
+      <h1>Maayan Rosenthal</h1>
+      <h2>Maker of Things?</h2>
+    </div>-->
 
-<!--  <div class="header">
-    <h1>Maayan Rosenthal</h1>
-    <h2>Maker of Things?</h2>
-  </div>-->
-
-<div id="portfolio-carousel" class="carousel slide" data-ride="carousel">
-  <!-- Indicators -->
-  <ol class="carousel-indicators">
-    <li data-target="#portfolio-carousel" data-slide-to="0" class="active"></li>
-    <li data-target="#portfolio-carousel" data-slide-to="1"></li>
-    <li data-target="#portfolio-carousel" data-slide-to="2"></li>
-  </ol>
-  <div class="carousel-inner" role="listbox">
-    <div class="item active">
-      <div class="container">
-        <div class="carousel-caption">
-          <h1>Who I Am</h1>
-          <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
+  <div id="portfolio-carousel" class="carousel slide" data-ride="carousel">
+    <!-- Indicators -->
+    <ol class="carousel-indicators">
+      <li data-target="#portfolio-carousel" data-slide-to="0" class="active"></li>
+      <li data-target="#portfolio-carousel" data-slide-to="1"></li>
+      <li data-target="#portfolio-carousel" data-slide-to="2"></li>
+    </ol>
+    <div class="carousel-inner" role="listbox">
+      <div class="item active">
+        <div class="container">
+          <div class="carousel-caption">
+            <h1>Who I Am</h1>
+            <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
+          </div>
+        </div>
+      </div>
+      <div class="item">
+        <div class="container">
+          <div class="carousel-caption">
+            <h1>What I Do</h1>
+            <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
+          </div>
+        </div>
+      </div>
+      <div class="item">
+        <div class="container">
+          <div class="carousel-caption">
+            <h1>What I've Done</h1>
+            <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
+          </div>
         </div>
       </div>
     </div>
-    <div class="item">
-      <div class="container">
-        <div class="carousel-caption">
-          <h1>What I Do</h1>
-          <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
+    <a class="left carousel-control" href="#portfolio-carousel" role="button" data-slide="prev">
+      <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+      <span class="sr-only">Previous</span>
+    </a>
+    <a class="right carousel-control" href="#portfolio-carousel" role="button" data-slide="next">
+      <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+      <span class="sr-only">Next</span>
+    </a>
+  </div>
+
+  <div class="marketing">
+    <div class="container">
+      <div class="row">
+        <div class="col-sm-4">
+        <span class="glyphicon glyphicon-eye-open" aria-hidden="true">
+          <h3>HTML &amp; CSS</h3>
+          <p>I really enjoy designing things!</p>
+        </span>
+        </div>
+        <div class="col-sm-4">
+        <span class="glyphicon glyphicon-flash" aria-hidden="true">
+          <h3>Javascript</h3>
+          <p>Interactive objects are awesome</p>
+        </span>
+        </div>
+        <div class="col-sm-4">
+        <span class="glyphicon glyphicon-hdd" aria-hidden="true">
+          <h3>RESTful APIs</h3>
+          <p>Fullstack all the way!</p>
+        </span>
         </div>
       </div>
     </div>
-    <div class="item">
-      <div class="container">
-        <div class="carousel-caption">
-          <h1>What I've Done</h1>
-          <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
-        </div>
-      </div>
-    </div>
   </div>
-  <a class="left carousel-control" href="#portfolio-carousel" role="button" data-slide="prev">
-    <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-    <span class="sr-only">Previous</span>
-  </a>
-  <a class="right carousel-control" href="#portfolio-carousel" role="button" data-slide="next">
-    <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-    <span class="sr-only">Next</span>
-  </a>
-</div>
 
-<div class="Marketing"></div>
-
-<div class="container"></div>
-
-<div class="row">
-  <div class="col-sm-4">
-      <span class="glyphicon glyphicon-eye-open" aria-hidden="true">
-        <h2>HTML & CSS</h2>
-        <p>I really enjoy designing things!</p>
-      </span>
-  </div>
-  <div class="col-sm-4">
-      <span class="glyphicon glyphicon-flash" aria-hidden="true">
-        <h2>Javascript</h2>
-        <p>Interactive objects are awesome</p>
-      </span>
-  </div>
-  <div class="col-sm-4">
-      <span class="glyphicon glyphicon-hdd" aria-hidden="true">
-        <h2>RESTful APIs</h2>
-        <p>Fullstack all the way!</p>
-      </span>
-  </div>
-</div>
-
-<footer>
-  <div class="container">
-    <h3>Contact Me</h3>
-    <p>Reach out using my email <a href="mailto:maayan.rose1@gmail.com">maayan.rose1@gmail.com</a> or linkedin @ Maayan Rosenthal</p>
-  </div>
-</footer>
-
-<!--  <div class="tagline">
-    <h3>What I Can Do!</h3>
-    <p>I've been in the world of cyber security for about 4 hours. I'm looking for my next challenge!</p>
-  </div>-->
-
-<!--  <div class="skills">
-    <h3>My Skills</h3>
-    <p>I enjoy learning new skills, writing code and being social!</p>
-    <ul>
-      <li>HTML</li>
-      <li>Javascript</li>
-      <li>NodeJS</li>
-      <li>Cyber Security</li>
-    </ul>
-    <div class="contact">
+  <footer>
+    <div class="container">
       <h3>Contact Me</h3>
       <p>Reach out using my email <a href="mailto:maayan.rose1@gmail.com">maayan.rose1@gmail.com</a> or linkedin @ Maayan Rosenthal</p>
     </div>
-  </div>-->
+  </footer>
+
+  <!--  <div class="tagline">
+      <h3>What I Can Do!</h3>
+      <p>I've been in the world of cyber security for about 4 hours. I'm looking for my next challenge!</p>
+    </div>-->
+
+  <!--  <div class="skills">
+      <h3>My Skills</h3>
+      <p>I enjoy learning new skills, writing code and being social!</p>
+      <ul>
+        <li>HTML</li>
+        <li>Javascript</li>
+        <li>NodeJS</li>
+        <li>Cyber Security</li>
+      </ul>
+      <div class="contact">
+        <h3>Contact Me</h3>
+        <p>Reach out using my email <a href="mailto:maayan.rose1@gmail.com">maayan.rose1@gmail.com</a> or linkedin @ Maayan Rosenthal</p>
+      </div>
+    </div>-->
+
 
 </body>
 </html>
