--- a/src/index.html
+++ b/src/index.html
@@ -54,7 +54,7 @@
         <div class="container">
           <div class="carousel-caption">
             <h1>Who I Am</h1>
-            <p>Cras justo odio, dapibus a elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
+            <p>I do stuff</p>
           </div>
         </div>
       </div>
@@ -62,7 +62,7 @@
         <div class="container">
           <div class="carousel-caption">
             <h1>What I Do</h1>
-            <p>Cras justo odio, dapibus act eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
+            <p>That's me</p>
           </div>
         </div>
       </div>
@@ -70,7 +70,7 @@
         <div class="container">
           <div class="carousel-caption">
             <h1>What I've Done</h1>
-            <p>Cras justoa at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
+            <p>Bla Bla Bla</p>
           </div>
         </div>
       </div>
